API 에러 처리 및 기타 세부 사항 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Foursquare Picker</string>
+    <string name="main_load_error_message">Can\'t Find Any Venue..</string>
+    <string name="main_load_guide_message">Allow the Location Setting \n&amp;\n Press Refresh Button</string>
 </resources>
